--- a/assets/css/code.css
+++ b/assets/css/code.css
@@ -38,6 +38,7 @@ pre.code .nt { color: #1e90ff; font-weight: bold } /* Name.Tag */
 pre.code .nv { color: #aa0000 } /* Name.Variable */
 pre.code .ow { color: #0000aa } /* Operator.Word */
 pre.code .w { color: #bbbbbb } /* Text.Whitespace */
+pre.code .mb { color: #009999 } /* Literal.Number.Bin */
 pre.code .mf { color: #009999 } /* Literal.Number.Float */
 pre.code .mh { color: #009999 } /* Literal.Number.Hex */
 pre.code .mi { color: #009999 } /* Literal.Number.Integer */
